--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim/bundle/vundle"]
 	path = .vim/bundle/vundle
 	url = git@github.com:gmarik/vundle.git
+[submodule ".bash/bash-git-prompt"]
+	path = .bash/bash-git-prompt
+	url = git@github.com:magicmonty/bash-git-prompt.git
