Updated the SSH config file

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,5 +1,5 @@
 # BTP account
-Host github.com-btp
+Host github-mxaddict.com
 	Hostname github.com
 	User git
-	IdentityFile ~/.ssh/id_rsa_btp
+	IdentityFile ~/.ssh/id_rsa_mxaddict
