Added GSSAPIAuthentication no to my .ssh/config file to speed up ssh connections

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,3 +3,6 @@ Host github-mxaddict.com
 	Hostname github.com
 	User git
 	IdentityFile ~/.ssh/id_rsa_mxaddict
+
+# Turn off GSSAPIAuthentication to speed up SSH connections
+GSSAPIAuthentication no
