Updated .ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,8 +1,8 @@
 # BTP account
-Host github-mxaddict.com
+Host btp.github.com
 	Hostname github.com
 	User git
-	IdentityFile ~/.ssh/id_rsa_mxaddict
+	IdentityFile ~/.ssh/id_rsa_btp
 
 # Turn off GSSAPIAuthentication to speed up SSH connections
 GSSAPIAuthentication no
