--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,17 @@
-set -g status on
-set -g status-utf8 on
-set -g status-interval 1
+set -g status-left-length 32
+set -g status-right-length 150
+
 set -g status-fg white
-set -g status-bg colour232
-set -g status-right '#[bg=colour233] #[fg=white,bg=colour234] %T #[fg=yellow,bg=colour233] #[bg=colour232] #(/Users/alex/Documents/Code/dotfiles2/bin/mac-battery.sh)'
-set -g status-left '#[fg=white,bg=colour232,bold] #S #[fg=colour254,bg=colour234,nobold]'
-set -g window-status-format "#[fg=colour16,bg=colour234] #I #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
-set -g window-status-current-format "#[fg=colour117,bg=colour31] #I #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
-set -g window-status-separator ""
+set -g status-bg colour234
+set -g window-status-activity-attr bold
+set -g pane-border-fg colour245
+set -g pane-active-border-fg colour39
+set -g message-fg colour16
+set -g message-bg colour221
+set -g message-attr bold
+set-option -g status-interval 1
+
+set -g status-left '#[fg=colour234,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour234,nobold]#[fg=colour234,bg=colour39,nobold]#[fg=colour234,bg=colour39,bold] #(whoami)@#(hostname -s) #[fg=colour39,bg=colour234,nobold]'
+set -g status-right '#[fg=colour252,bg=colour234,nobold]#[fg=colour234,bg=colour252,bold] %a %b %e  %H:%M:%S '
+set -g window-status-format "#[fg=colour234,bg=colour238]#[fg=colour245,bg=colour238,noreverse,bold] #I  #W #[fg=colour238,bg=colour234,nobold]"
+set -g window-status-current-format "#[fg=colour234,bg=colour208]#[fg=colour234,bg=colour208,noreverse,bold] #I  #W #[fg=colour208,bg=colour234,nobold]"
