--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = "Barry Deeney"
-	email = "mxaddict@codedmaster.com"
+	name = "Nickeleus Saducas"
+	email = "nickeleus@gmail.com"
 [diff]
 	external = git-vimdiff
 [pager]
